--- a/Sprint2/package.json
+++ b/Sprint2/package.json
@@ -10,7 +10,11 @@
     "axios": "^0.18.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.486",
+    "react-native-network-info": "^4.0.0",
+    "react-native-public-ip": "^1.0.0",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^1.0.0-beta.11"
   },
   "devDependencies": {
