--- a/Sprint2/package.json
+++ b/Sprint2/package.json
@@ -7,13 +7,16 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/runtime": "^7.1.2",
     "axios": "^0.18.0",
     "react": "16.5.0",
     "react-native": "0.57.0",
+    "react-native-camera": "^1.3.0",
     "react-native-elements": "^0.19.1",
     "react-native-navigation": "^1.1.486",
     "react-native-network-info": "^4.0.0",
     "react-native-public-ip": "^1.0.0",
+    "react-native-qrcode-scanner": "^1.1.0",
     "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^1.0.0-beta.11"
   },
