OrderItem, Cart, Billing page, v1

--- a/Sprint2/android/build.gradle
+++ b/Sprint2/android/build.gradle
@@ -3,14 +3,15 @@
 buildscript {
     ext {
         buildToolsVersion = "27.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 27
         targetSdkVersion = 26
         supportLibVersion = "27.1.1"
     }
     repositories {
-        jcenter()
+
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.4'
@@ -23,12 +24,13 @@ buildscript {
 allprojects {
     repositories {
         mavenLocal()
-        jcenter()
+
         maven {
             // All of React Native (JS, Obj-C sources, Android binaries) is installed from npm
             url "$rootDir/../node_modules/react-native/android"
         }
         google()
+        jcenter()
     }
 }
 
@@ -37,3 +39,20 @@ task wrapper(type: Wrapper) {
     gradleVersion = '4.4'
     distributionUrl = distributionUrl.replace("bin", "all")
 }
+
+  subprojects {
+
+    project.evaluationDependsOn(':app')
+//[PART TO ADD START]
+    project.configurations.all {
+
+        resolutionStrategy.eachDependency { details ->
+
+            if (details.requested.group == 'com.android.support'
+                    && !details.requested.name.contains('multidex') ) {
+                details.useVersion "27.1.0"
+            }
+        }
+    }
+//[PART TO ADD END]
+    }
