--- a/FYP/package.json
+++ b/FYP/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "prop-types": "^15.6.2",
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-camera": "^1.3.1",
     "react-native-elements": "^0.19.1",
     "react-native-qrcode-scanner": "^1.1.0",
+    "react-native-scrolling-menu": "^0.1.1",
     "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.18.1"
   },
