--- a/Sprint2/android/app/build.gradle
+++ b/Sprint2/android/app/build.gradle
@@ -137,6 +137,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-navigation')
     compile project(':react-native-camera')
     compile project(':react-native-network-info')
     compile project(':react-native-vector-icons')
