--- a/LocalFyp/package.json
+++ b/LocalFyp/package.json
@@ -12,6 +12,7 @@
     "react": "16.6.0-alpha.8af6728",
     "react-native": "0.57.4",
     "react-native-camera": "^1.3.1",
+    "react-native-linear-gradient": "^2.4.3",
     "react-native-qrcode-scanner": "^1.1.0",
     "react-native-tab-view": "^1.2.0",
     "react-native-vector-icons": "^6.0.2",
