--- a/FYP/package.json
+++ b/FYP/package.json
@@ -8,11 +8,13 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "native-base": "^2.9.3",
+    "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-elements": "^0.19.1",
     "react-native-fit-image": "^1.5.4",
     "react-native-responsive-fontsize": "^0.1.6",
+    "react-native-super-grid": "^2.4.4",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.17.0",
     "react-redux": "^6.0.0",
