--- a/FYP/package.json
+++ b/FYP/package.json
@@ -14,6 +14,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-fit-image": "^1.5.4",
     "react-native-responsive-fontsize": "^0.1.6",
+    "react-native-simple-radio-button": "^2.7.3",
     "react-native-super-grid": "^2.4.4",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.17.0",
