--- a/FYP/package.json
+++ b/FYP/package.json
@@ -11,7 +11,7 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
-    "react-native-elements": "^0.19.1",
+    "react-native-elements": "^1.0.0-beta7",
     "react-native-fit-image": "^1.5.4",
     "react-native-gesture-handler": "^1.0.12",
     "react-native-responsive-fontsize": "^0.1.6",
