--- a/FYP/package.json
+++ b/FYP/package.json
@@ -11,6 +11,7 @@
     "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.57.8",
+    "react-native-animatable": "^1.3.1",
     "react-native-elements": "^1.0.0-beta7",
     "react-native-fit-image": "^1.5.4",
     "react-native-gesture-handler": "^1.0.12",
@@ -19,6 +20,7 @@
     "react-native-super-grid": "^2.4.4",
     "react-native-vector-icons": "^6.1.0",
     "react-navigation": "^2.17.0",
+    "react-navigation-transitions": "^1.0.6",
     "react-redux": "^6.0.0",
     "redux": "^4.0.1"
   },
